--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@ layout: page
 <p>Em suas viagens, estiveram em países, tais como Argentina, Uruguai, Chile, Colômbia, Venezuela, Curaçao, Estados Unidos, França, Espanha, Itália, Alemanha, Austrália, Nova Zelândia, Japão, Índia, Tailândia, China, Taiwan, Coreia do Sul, Emirados Árabes Unidos, Líbano, Jordânia, Egito, Malásia, Turquia, Grécia, Suíça, República&nbsp;Tcheca, Suécia,&nbsp;Guernsey,&nbsp;Finlândia, Georgia, &nbsp;entre outros.</p>
 
 <p><center>
-<iframe width="640" height="360" src="//www.youtube.com/embed/JWqBj8FYMhI?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="640" height="360" src="http://www.youtube.com/embed/JWqBj8FYMhI?rel=0" frameborder="0" allowfullscreen></iframe>
 </center></p>
 
 <p>Ambos trabalham normalmente no dia-a-dia, enquanto viajam. <a href="http://viniciusteles.com.br/">Vinícius</a> desenvolve software para sua empresa, a <a href="http://improveit.com.br/">Improve It</a>. Faz isso remotamente, de onde estiver no mundo. E assim trabalha na manutenção do principal produto da empresa, o <a href="http://beonthe.net/">Be on the Net</a>.<br /><br />Eles vão ao Brasil a cada ano e passam três a quatro meses no país para que <a href="http://patriciafigueira.com.br/">Patricia</a> possa fotografar os casamentos. Depois, quando voltam a viajar para o exterior, <a href="http://patriciafigueira.com.br/">Patricia</a> passa a trabalhar na edição das fotos e preparação dos álbuns. Trabalho esse que ela realiza de onde estiver no mundo.</p>
