Adicionei email de contato

--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,8 @@ layout: page
 
 <p>Quer saber <a href="http://www.casalpartiu.com.br/a-origem-do-casal-partiu">como tudo começou</a>?</p>
 
+<p>Quer entrar em contato? Nosso email é <a href="mailto:contato@casalpartiu.com.br">contato@casalpartiu.com.br</a>.
+
 <div class="center">
   <img border="0" height="426" src="http://1.bp.blogspot.com/-RHtpM789ZUU/UP-zPbotNBI/AAAAAAAAAR4/O2mBc8fYWos/s640/_DSC8748.jpg" width="640" alt="Patricia e Vinícius, Istambul, 2013. Foto do nosso querido amigo Cenk Aydın." />
 </div>
