Adicionei metadados ao index

--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,9 @@
 ---
 layout: page
+thumbnail: http://1.bp.blogspot.com/-RHtpM789ZUU/UP-zPbotNBI/AAAAAAAAAR4/O2mBc8fYWos/s640/_DSC8748.jpg
+description: Vinícius e Patricia, brasileiros, venderam tudo e saíram pelo mundo há mais de três anos. Eles se tornaram nômades. Conheça-os.
+permalink: /
+keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, viagem pelo mundo, nômade digital
 ---
 <h1>Quem é o Casal Partiu?</h1>
 <p><a href="http://patriciafigueira.com.br/">Patrícia Figueira</a> fotografa casamentos. <a href="http://viniciusteles.com.br/">Vinícius Teles</a> faz software. Ambos viviam juntos em Niterói, RJ até 2010, quando venderam tudo e saíram pelo mundo.</p>
