Algumas correções nos metadados

--- a/source/_posts/2013-01-17-guia-de-viagem-local.html
+++ b/source/_posts/2013-01-17-guia-de-viagem-local.html
@@ -13,6 +13,7 @@ categories:
  - turquia
  - couchsurfing
  - istambul
+ - amigos
 ---
 <p>
 <center><img border="0" height="164" src="http://3.bp.blogspot.com/-oCShpa8SMX4/UPghtgkKpzI/AAAAAAAAAQ0/I_F58Zdeqj8/s640/istambul_pan2.jpg" width="640" alt="Panorâmica do Golden Horn"/></center>
