--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
+title: Vinícius e Patricia são nômades digitais, não têm casa fixa em nenhum lugar do mundo
 thumbnail: http://1.bp.blogspot.com/-RHtpM789ZUU/UP-zPbotNBI/AAAAAAAAAR4/O2mBc8fYWos/s640/_DSC8748.jpg
 description: Vinícius e Patricia, brasileiros, venderam tudo e saíram pelo mundo há mais de três anos. Eles se tornaram nômades. Conheça-os.
-permalink: /
 keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, viagem pelo mundo, nômade digital
 ---
 <h1>Quem é o Casal Partiu?</h1>
