--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@ keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, via
 <h1>Quem é o Casal Partiu?</h1>
 <p><a href="http://patriciafigueira.com.br/">Patrícia Figueira</a> fotografa casamentos. <a href="http://viniciusteles.com.br/">Vinícius Teles</a> faz software. Ambos viviam juntos em Niterói, RJ até 2010, quando venderam tudo e saíram pelo mundo.</p>
 
-<p>Em suas viagens, estiveram em países, tais como Argentina, Uruguai, Chile, Colômbia, Venezuela, Curaçao, Bahamas, Estados Unidos, França, Espanha, Itália, Alemanha, Austrália, Nova Zelândia, Japão, Índia, Tailândia, China, Taiwan, Coreia do Sul, Emirados Árabes Unidos, Líbano, Jordânia, Egito, Malásia, Turquia, Grécia, Suíça, República&nbsp;Tcheca, Suécia,&nbsp;Guernsey,&nbsp;Finlândia, Georgia, Bulgária, Romênia, &nbsp;entre outros.</p>
+<p>Em suas viagens, estiveram em países, tais como Argentina, Uruguai, Chile, Colômbia, Venezuela, Curaçao, Bahamas, Estados Unidos, França, Espanha, Itália, Alemanha, Austrália, Nova Zelândia, Japão, Índia, Tailândia, China, Taiwan, Coreia do Sul, Emirados Árabes Unidos, Líbano, Jordânia, Egito, Malásia, Turquia, Grécia, Suíça, República&nbsp;Tcheca, Suécia,&nbsp;Guernsey,&nbsp;Finlândia, Georgia, Bulgária, Romênia, Sérvia, Macedonia (FYROM), &nbsp;entre outros.</p>
 
 <div class="center">
 <iframe width="640" height="360" src="http://www.youtube.com/embed/lciHf4EvFPU" frameborder="0" allowfullscreen></iframe>
