--- a/source/index.html
+++ b/source/index.html
@@ -2,11 +2,11 @@
 layout: page
 title: Vinícius e Patricia são nômades digitais, não têm casa fixa em nenhum lugar do mundo
 thumbnail: http://1.bp.blogspot.com/-RHtpM789ZUU/UP-zPbotNBI/AAAAAAAAAR4/O2mBc8fYWos/s640/_DSC8748.jpg
-description: Vinícius e Patricia, brasileiros, venderam tudo e saíram pelo mundo há mais de três anos. Eles se tornaram nômades. Conheça-os.
+description: Vinícius e Patricia, brasileiros, venderam tudo, tornaram-se nômades digitais e saíram pelo mundo há mais de três anos. 
 keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, viagem pelo mundo, nômade digital
 ---
 <h1>Quem é o Casal Partiu?</h1>
-<p><a href="http://patriciafigueira.com.br/">Patrícia Figueira</a> fotografa casamentos. <a href="http://viniciusteles.com.br/">Vinícius Teles</a> faz software. Ambos viviam juntos em Niterói, RJ até 2010, quando venderam tudo e saíram pelo mundo.</p>
+<p><a href="http://patriciafigueira.com.br/">Patrícia Figueira</a> fotografa casamentos. <a href="http://viniciusteles.com.br/">Vinícius Teles</a> faz software. Ambos viviam juntos em Niterói, RJ até 2010, quando venderam tudo, viraram nômades digitais e saíram pelo mundo.</p>
 
 <p>Em suas viagens, estiveram em países, tais como Argentina, Uruguai, Chile, Colômbia, Venezuela, Curaçao, Bahamas, Estados Unidos, França, Espanha, Itália, Alemanha, Austrália, Nova Zelândia, Japão, Índia, Tailândia, China, Taiwan, Coreia do Sul, Emirados Árabes Unidos, Líbano, Jordânia, Egito, Malásia, Turquia, Grécia, Suíça, República&nbsp;Tcheca, Suécia,&nbsp;Guernsey,&nbsp;Finlândia, Georgia, Bulgária, Romênia, Sérvia, Macedonia (FYROM), &nbsp;entre outros.</p>
 
