--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Vinícius e Patricia são nômades digitais, não têm casa fixa em nenhum lugar do mundo
 thumbnail: http://1.bp.blogspot.com/-RHtpM789ZUU/UP-zPbotNBI/AAAAAAAAAR4/O2mBc8fYWos/s640/_DSC8748.jpg
-description: Vinícius e Patricia, brasileiros, venderam tudo, tornaram-se nômades digitais e saíram pelo mundo há mais de três anos. 
+description: Vinícius e Patricia, brasileiros, venderam tudo, tornaram-se nômades digitais e saíram pelo mundo há mais de quatro anos. 
 keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, viagem pelo mundo, nômade digital
 ---
 <h1>Quem é o Casal Partiu?</h1>
