--- a/source/index.html
+++ b/source/index.html
@@ -13,11 +13,13 @@ keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, via
 <p>Veja a <a href="http://oglobo.globo.com/sociedade/conte-algo-que-nao-sei/patricia-figueira-vinicius-teles-casal-nomade-viajar-pelo-mundo-mais-barato-que-morar-aqui-14772504">reportagem sobre o Casal Partiu no Jornal O Globo</a>.</p>
 
 <div class="center">
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/GEJUnBoGrEI" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/GEJUnBoGrEI?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <div class="center">
-<iframe width="640" height="360" src="http://www.youtube.com/embed/lciHf4EvFPU" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/1tizYurLcUQ?rel=0" frameborder="0" allowfullscreen></iframe></div>
+<div class="center">
+<iframe width="640" height="360" src="http://www.youtube.com/embed/lciHf4EvFPU?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <p>Ambos trabalham normalmente no dia-a-dia, enquanto viajam. <a href="http://viniciusteles.com.br/">Vinícius</a> desenvolve software para sua empresa, a <a href="http://improveit.com.br/">Improve It</a>. Faz isso remotamente, de onde estiver no mundo. E assim trabalha na manutenção do principal produto da empresa, o <a href="http://beonthe.net/">Be on the Net</a>.<br /><br />Eles vão ao Brasil a cada ano e passam três a quatro meses no país para que <a href="http://patriciafigueira.com.br/">Patricia</a> possa fotografar os casamentos. Depois, quando voltam a viajar para o exterior, <a href="http://patriciafigueira.com.br/">Patricia</a> passa a trabalhar na edição das fotos e preparação dos álbuns. Trabalho esse que ela realiza de onde estiver no mundo.</p>
