--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,15 @@ keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, via
 <div class="center">
   <iframe width="640" height="360" src="https://www.youtube.com/embed/1tizYurLcUQ?rel=0" frameborder="0" allowfullscreen></iframe></div>
 <div class="center">
-<iframe width="640" height="360" src="http://www.youtube.com/embed/lciHf4EvFPU?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/lciHf4EvFPU?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<div class="center">
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/coDzEPvckbQ" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<div class="center">
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/videoseries?list=PLaXBS0KXfB4N3i3nA1lHemqVEdRUBosC7" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <p>Ambos trabalham normalmente no dia-a-dia, enquanto viajam. <a href="http://viniciusteles.com.br/">Vinícius</a> desenvolve software para sua empresa, a <a href="http://improveit.com.br/">Improve It</a>. Faz isso remotamente, de onde estiver no mundo. E assim trabalha na manutenção do principal produto da empresa, o <a href="http://beonthe.net/">Be on the Net</a>.<br /><br />Eles vão ao Brasil a cada ano e passam três a quatro meses no país para que <a href="http://patriciafigueira.com.br/">Patricia</a> possa fotografar os casamentos. Depois, quando voltam a viajar para o exterior, <a href="http://patriciafigueira.com.br/">Patricia</a> passa a trabalhar na edição das fotos e preparação dos álbuns. Trabalho esse que ela realiza de onde estiver no mundo.</p>
