Adicionei o link do Airbnb

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,9 @@ keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, via
 ---
 <h1>Quem é o Casal Partiu?</h1>
 
-<p>Paradeiro atual: <strong><a href="https://www.google.ro/maps/place/Bucareste/@44.4379849,25.9542102,11z/data=!3m1!4b1!4m2!3m1!1s0x40b1f93abf3cad4f:0xac0632e37c9ca628?hl=pt-BR">Bucareste</a></strong>, <strong><a href="https://www.google.ro/maps/place/Romania/@45.9237176,22.7609381,7z/data=!3m1!4b1!4m2!3m1!1s0x40b1ff26958976c3:0x84ef4f92a804b194?hl=pt-BR">Romênia</a></strong> (até dez/2015).</p>
+<p>Paradeiro atual: <strong><a href="https://www.google.ro/maps/place/Bucareste/@44.4379849,25.9542102,11z/data=!3m1!4b1!4m2!3m1!1s0x40b1f93abf3cad4f:0xac0632e37c9ca628?hl=pt-BR">Bucareste</a></strong>, <strong><a href="https://www.google.ro/maps/place/Romania/@45.9237176,22.7609381,7z/data=!3m1!4b1!4m2!3m1!1s0x40b1ff26958976c3:0x84ef4f92a804b194?hl=pt-BR">Romênia</a></strong> (até dez/2015).</p> 
+
+<p>Pergunta mais frequente que nos fazem: <strong>como vocês acham acomodação legal e com preços acessíveis no mundo todo?</strong> Usando o <strong><a href="http://www.airbnb.com.br/c/vteles?s=8">Airbnb</a></strong>. E você pode <strong><a href="http://www.airbnb.com.br/c/vteles?s=8">ganhar US$ 20 para sua primeira estadia</a></strong>.</p>
 
 <p>
 Veja a <strong><a href="http://gshow.globo.com/programas/mais-voce/videos/t/programas/v/vinicius-e-patricia-decidem-deixar-brasil-e-trabalhar-viajando-pelo-mundo/4320127/">matéria na Globo sobre Nômades Digitais com o Casal Partiu no programa Mais Você da Ana Maria Braga</a></strong>. E também a parte da mesma matéria em que falam sobre <a href="http://gshow.globo.com/programas/mais-voce/videos/t/programas/v/casal-de-nomades-digitais-fala-como-lidam-com-a-questao-financeira-nas-viagens/4320141/">como lidam com a questão financeira nas viagens</a>.</p>
