--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@ keywords: casal partiu, vinícius teles, patricia figueira, viagem, nômade, via
 ---
 <h1>Quem é o Casal Partiu?</h1>
 
-<p>Paradeiro atual: <strong><a href="https://www.google.ro/maps/place/Bucareste/@44.4379849,25.9542102,11z/data=!3m1!4b1!4m2!3m1!1s0x40b1f93abf3cad4f:0xac0632e37c9ca628?hl=pt-BR">Bucareste</a></strong>, <strong><a href="https://www.google.ro/maps/place/Romania/@45.9237176,22.7609381,7z/data=!3m1!4b1!4m2!3m1!1s0x40b1ff26958976c3:0x84ef4f92a804b194?hl=pt-BR">Romênia</a></strong> (até dez/2015).</p> 
+<p>Paradeiro atual: <strong><a href="https://www.google.bg/maps/place/Sofia/@42.695537,23.2539067,12z/data=!3m1!4b1!4m2!3m1!1s0x40aa8682cb317bf5:0x400a01269bf5e60?hl=pt-BR">Sófia</a></strong>, <strong><a href="https://www.google.bg/maps/place/Bulgaria/@42.7071416,23.2401197,7z/data=!3m1!4b1!4m2!3m1!1s0x40a8fec1c85bf089:0xa01269bf4c10?hl=pt-BR">Bulgária</a></strong> (até março/2016).</p> 
 
 <p>Pergunta mais frequente que nos fazem: <strong>como vocês acham acomodação legal e com preços acessíveis no mundo todo?</strong> Usando o <strong><a href="http://www.airbnb.com.br/c/vteles?s=8">Airbnb</a></strong>. E você pode <strong><a href="http://www.airbnb.com.br/c/vteles?s=8">ganhar US$ 20 para sua primeira estadia</a></strong>.</p>
 
